Fixed some bugs and added images in about us page

--- a/quiz/templates/quiz/about_us.html
+++ b/quiz/templates/quiz/about_us.html
@@ -7,11 +7,12 @@
 <div class="container flex justify-center">
         <div style="padding: 50px;">
                 <h1 class="mb-5" style="font-size: 50px;font-weight: bold;">Quizzer</h1>
-                <h3 class="instructor_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias
-                        sapiente delectus praesentium facere
-                        cumque nesciunt mollitia odit, deleniti neque debitis soluta
-                        illum architecto dolores optio dicta
-                        molestias consectetur aspernatur ad!</h3>
+                <h3 class="instructor_text">This site is designed to take online exams. Unlike other online examination
+                        systems this website is not only intended for students but should also provide facilities for
+                        institutes to host online exams/exams. Online examination system is a technology-based way to
+                        simplify activities such as identifying test patterns with question banks, setting test timings,
+                        objective/subjective question sections, and exams using computer or mobile devices in a
+                        paperless manner.</h3>
 
         </div>
 </div>
@@ -24,14 +25,12 @@
 <div class="container">
         <div style="padding-top: 100px;">
                 <div class="instructor">
-                        
+
                         <div class="section row">
 
                                 <div class="instructor_card col-lg-6">
                                         <div class="card" style="width: 18rem;">
-                                                <img class="card-img-top"
-                                                        src="https://www.kindpng.com/picc/m/495-4952535_create-digital-profile-icon-blue-user-profile-icon.png"
-                                                        alt="Card image cap">
+                                                <img class="card-img-top" src="media/Dr.jpeg" alt="Card image cap">
                                                 <div class="card-body">
                                                         <h5 class="card-title">Dr. Essam Elfakharany</h5>
                                                         <a href="#" class="btn btn-primary">personal profile</a>
@@ -41,12 +40,11 @@
 
                                 <div class="instructor_text col-lg-6">
                                         <p style="font-size: 50px;text-align: center;">Instructor</p>
-                                </br>
-                                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias
-                                                sapiente delectus praesentium facere
-                                                cumque nesciunt mollitia odit, deleniti neque debitis soluta
-                                                illum architecto dolores optio dicta
-                                                molestias consectetur aspernatur ad!</p>
+                                        </br>
+                                        <p>We highly indebted to (Doctor Essam El-Fakharany) for the guidance and
+                                                constant supervision as well as for providing necessary information
+                                                regarding the project & also for the support in completing the project.
+                                        </p>
                                 </div>
 
                         </div>
@@ -58,9 +56,7 @@
                                 members</p>
                         <div class="team row ">
                                 <div class="card" style="width: 18rem;">
-                                        <img class="card-img-top"
-                                                src="https://www.kindpng.com/picc/m/495-4952535_create-digital-profile-icon-blue-user-profile-icon.png"
-                                                alt="Card image cap">
+                                        <img class="card-img-top" src="media/Ahmed.jpeg" alt="Card image cap">
                                         <div class="card-body">
                                                 <h5 class="card-title">Ahmed Saber</h5>
                                                 <p style="color: #5a5a5a;">Team Leader</p>
@@ -91,9 +87,7 @@
                                 </div>
 
                                 <div class="card" style="width: 18rem;">
-                                        <img class="card-img-top"
-                                                src="https://www.kindpng.com/picc/m/495-4952535_create-digital-profile-icon-blue-user-profile-icon.png"
-                                                alt="Card image cap">
+                                        <img class="card-img-top" src="media/Kemawy.jpeg" alt="Card image cap">
                                         <div class="card-body">
                                                 <h5 class="card-title">Mohammed Abd-Elrahman</h5>
                                                 </br>
@@ -103,9 +97,7 @@
                                 </div>
 
                                 <div class="card" style="width: 18rem;">
-                                        <img class="card-img-top"
-                                                src="https://www.kindpng.com/picc/m/495-4952535_create-digital-profile-icon-blue-user-profile-icon.png"
-                                                alt="Card image cap">
+                                        <img class="card-img-top" src="media/Youssef.jpeg" alt="Card image cap">
                                         <div class="card-body">
                                                 <h5 class="card-title">Youssef Tharwat</h5>
                                                 </br>
@@ -116,9 +108,7 @@
                                 </div>
 
                                 <div class="card" style="width: 18rem;">
-                                        <img class="card-img-top"
-                                                src="https://www.kindpng.com/picc/m/495-4952535_create-digital-profile-icon-blue-user-profile-icon.png"
-                                                alt="Card image cap">
+                                        <img class="card-img-top" src="media/Ali.jpeg" alt="Card image cap">
                                         <div class="card-body">
                                                 <h5 class="card-title">Ali Elnoby</h5>
                                                 </br>
