--- a/quiz/templates/quiz/attemp.html
+++ b/quiz/templates/quiz/attemp.html
@@ -83,8 +83,6 @@
     .then(function (u) { return u.json() })
     .then(function (data) {
       data.quiz_date = new Date(Date.parse(data.quiz_date))
-      data.quiz_date = new Date(data.quiz_date.getTime() - 2 * 60 * 60000)
-
       var countDownDate = new Date(Date.parse(data.quiz_date)).getTime() + data.quiz_duration * 60000;
       var x = setInterval(function () {
         var now = new Date().getTime();
@@ -266,15 +264,15 @@
 
         e = document.getElementById("date");
         data.quiz_date = new Date(Date.parse(data.quiz_date))
+        data.quiz_date = new Date(data.quiz_date.getTime() + 2*60*60000 )
         var quiz_date = new Date();
         var dd = String(data.quiz_date.getDate()).padStart(2, "0");
         var mm = String(data.quiz_date.getMonth() + 1).padStart(2, "0"); //January is 0!
         var yyyy = data.quiz_date.getFullYear();
         quiz_date = dd + "/" + mm + "/" + yyyy;
         e.innerText = quiz_date;
-
         e = document.getElementById("time");
-        var quiz_time = data.quiz_date.getUTCHours() + ':' + data.quiz_date.getUTCMinutes();
+        var quiz_time =  data.quiz_date.getUTCHours()  + ':' + data.quiz_date.getUTCMinutes();
         e.innerText = quiz_time;
 
         e = document.getElementById("duration");
