--- a/quiz/templates/quiz/quizzes.html
+++ b/quiz/templates/quiz/quizzes.html
@@ -61,13 +61,14 @@
 
         for (q of quizzes_dict) {
           q.quiz_date = new Date(Date.parse(q.quiz_date))
+
           var quiz_date = new Date();
           var dd = String(q.quiz_date.getDate()).padStart(2, "0");
           var mm = String(q.quiz_date.getMonth() + 1).padStart(2, "0"); //January is 0!
           var yyyy = q.quiz_date.getFullYear();
           quiz_date = dd + "/" + mm + "/" + yyyy;
 
-          var quiz_time = q.quiz_date.getUTCHours() + ':' + q.quiz_date.getUTCMinutes();
+          var quiz_time = (q.quiz_date.getUTCHours() +2 ) + ':' + q.quiz_date.getUTCMinutes();
 
           var cont = document.createElement("div");
           cont.classList.add("card", "col-md-3", "col-sm-5", "m-4");
