--- a/quiz/templates/quiz/view_group.html
+++ b/quiz/templates/quiz/view_group.html
@@ -157,7 +157,7 @@
           var yyyy = q.quiz_date.getFullYear();
           quiz_date = dd + "/" + mm + "/" + yyyy;
 
-          var quiz_time = q.quiz_date.getUTCHours() + ':' + q.quiz_date.getUTCMinutes();
+          var quiz_time = (q.quiz_date.getUTCHours() + 2) + ':' + q.quiz_date.getUTCMinutes();
 
 
           var cont = document.createElement("div");
